--- a/src/app/components/lista-usuarios/lista-usuarios.component.html
+++ b/src/app/components/lista-usuarios/lista-usuarios.component.html
@@ -1,3 +1,11 @@
-<p>
-  lista-usuarios works!
-</p>
+<h3> Usuarios </h3>
+<hr>
+
+<ul class="list-group">
+  <li class="list-group-item" *ngFor="let usuario of usuariosActivosObs | async">
+    {{ usuario.nombre }}
+
+    <span class="badge badge-primary"> {{ usuario.sala }} </span>
+    <span class="badge badge-info"> {{ usuario.id }} </span>
+  </li>
+</ul>
