--- a/src/app/pages/mensajes/mensajes.component.html
+++ b/src/app/pages/mensajes/mensajes.component.html
@@ -1,6 +1,13 @@
 <h1>
   Usuario: <small> {{ wsService.usuario.nombre }} </small>
 </h1>
+
+<div class="w-100 text-right">
+  <button class="btn btn-danger" (click)="salir()">
+    Salir
+  </button>
+</div>
+
 <hr>
 
 <div class="row">
